--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto - Home</title>
+    <!--Bootstrap-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/shortcode/shortcode.css" />
   </head>
   <body>
     <header class="fixed">
@@ -134,7 +143,7 @@
       </div>
     </section>
 
-    <section class="about-areat pt-70 pb-100">
+    <section class="about-area pt-70 pb-100">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
