--- a/index.html
+++ b/index.html
@@ -11,8 +11,32 @@
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
       crossorigin="anonymous"
     />
+    <!--OWL Carousel-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <!-- Animate CSS-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css"
+    />
+    <!--Font Awesome Modificada-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+    />
+    <!--Icones Google-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
+    <!-- CSS Custom-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/shortcode/shortcode.css" />
+
+    <!-- Modernizr JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
     <header class="fixed">
@@ -39,7 +63,10 @@
                 <!-- Main Menu End-->
                 <!-- Search Form Start-->
                 <div class="search-btn">
-                  <ul data-toggle="dropdow" class="header-search search-toggle">
+                  <ul
+                    data-toggle="dropdown"
+                    class="header-search search-toggle"
+                  >
                     <li class="search-menu">
                       <i class="zmdi zmdi-search"> </i>
                     </li>
@@ -69,7 +96,10 @@
 
     <section class="slider-area">
       <div class="slider-wrapper">
-        <div class="single-slide">
+        <div
+          class="single-slide"
+          style="background-image: url(img/slider/slider1920x1080cafe.jpg)"
+        >
           <div class="banner-content">
             <div class="container">
               <div class="row">
@@ -92,7 +122,10 @@
           </div>
         </div>
 
-        <div class="single-slide">
+        <div
+          class="single-slide"
+          style="background-image: url(img/slider/slider1920x1080aromacafe.jpg)"
+        >
           <div class="banner-content">
             <div class="container">
               <div class="row">
@@ -158,7 +191,7 @@
 
           <div class="col-md-6 col-sm-6 hidden-xs">
             <div class="about-image">
-              <img src="" alt="" />
+              <img src="img/banner/banner-coffe570x439to659x439.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -219,11 +252,11 @@
               <div class="single-tesimonial text-center">
                 <p>Avaliação 01</p>
                 <div class="client-rating">
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start-half"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star-half"></i>
                 </div>
                 <h4>
                   <a href="#">William Souza</a>
@@ -232,11 +265,11 @@
               <div class="single-tesimonial text-center">
                 <p>Avaliação 02</p>
                 <div class="client-rating">
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start-half"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star-half"></i>
                 </div>
                 <h4>
                   <a href="#">Adriana Carvalho</a>
@@ -245,11 +278,11 @@
               <div class="single-tesimonial text-center">
                 <p>Avaliação 03</p>
                 <div class="client-rating">
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start-half"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star-half"></i>
                 </div>
                 <h4>
                   <a href="#">Robson</a>
@@ -258,11 +291,11 @@
               <div class="single-tesimonial text-center">
                 <p>Avaliação 04</p>
                 <div class="client-rating">
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start-half"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star-half"></i>
                 </div>
                 <h4>
                   <a href="#">Matheus</a>
@@ -271,11 +304,11 @@
               <div class="single-tesimonial text-center">
                 <p>Avaliação 05</p>
                 <div class="client-rating">
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start"></i>
-                  <i class="zmdi zmdi-start-half"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star"></i>
+                  <i class="zmdi zmdi-star-half"></i>
                 </div>
                 <h4>
                   <a href="#">Ana Paula</a>
@@ -289,42 +322,42 @@
                 <div class="col-md-4 col-sm-4">
                   <a href="#" class="single-client">
                     <span class="client-table-cell">
-                      <img src="" alt="" />
+                      <img src="img/client/client1.jpg" alt="" />
                     </span>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-4">
                   <a href="#" class="single-client">
                     <span class="client-table-cell">
-                      <img src="" alt="" />
+                      <img src="img/client/client2.jpg" alt="" />
                     </span>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-4">
                   <a href="#" class="single-client">
                     <span class="client-table-cell">
-                      <img src="" alt="" />
+                      <img src="img/client/client3.jpg" alt="" />
                     </span>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-4">
                   <a href="#" class="single-client">
                     <span class="client-table-cell">
-                      <img src="" alt="" />
+                      <img src="img/client/client4.jpg" alt="" />
                     </span>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-4">
                   <a href="#" class="single-client">
                     <span class="client-table-cell">
-                      <img src="" alt="" />
+                      <img src="img/client/client5.jpg" alt="" />
                     </span>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-4">
                   <a href="#" class="single-client">
                     <span class="client-table-cell">
-                      <img src="" alt="" />
+                      <img src="img/client/client6.jpg" alt="" />
                     </span>
                   </a>
                 </div>
@@ -384,7 +417,7 @@
             <div class="col-lg-3 hidden-md hidden-sm col-xs-12">
               <div class="single-footer-widget">
                 <h3>Boletim</h3>
-                <div class="newletter-form">
+                <div class="newsletter-form">
                   <form action="#" id="mc-form" class="mc-form fix">
                     <input
                       type="email"
@@ -429,4 +462,11 @@
       </div>
     </section>
   </body>
+  <!-- JQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!--Bootstrap-->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <!-- Custom JS -->
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/main.js"></script>
 </html>
