--- a/menu.html
+++ b/menu.html
@@ -212,7 +212,7 @@
                       name="email"
                       placeholder="Digite seu e-mail"
                     />
-                    <button type="submit" id="mc-submit" class="ddefault-btn">
+                    <button type="submit" id="mc-submit" class="default-btn">
                       <span>Enviar</span>
                     </button>
                   </form>
