--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-9 col-xs-12">
               <div class="content-wrapper">
-                <div class="main-menu tex-right">
+                <div class="main-menu text-right">
                   <nav>
                     <ul>
                       <li><a href="index.html">Home</a></li>
@@ -467,6 +467,6 @@
   <!--Bootstrap-->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- Custom JS -->
-  <script src="js/owl.carousel.min.js"></script>
+  <!-- <script src="js/owl.carousel.min.js"></script> -->
   <script src="js/main.js"></script>
 </html>
