--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto - Contato</title>
+    <!--Bootstrap-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+      crossorigin="anonymous"
+    />
+    <!-- CSS Custom-->
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/shortcode/shortcode.css" />
   </head>
   <body>
     <header class="fixed">
@@ -30,7 +40,10 @@
                 <!-- Main Menu End-->
                 <!-- Search Form Start-->
                 <div class="search-btn">
-                  <ul data-toggle="dropdow" class="header-search search-toggle">
+                  <ul
+                    data-toggle="dropdown"
+                    class="header-search search-toggle"
+                  >
                     <li class="search-menu">
                       <i class="zmdi zmdi-search"> </i>
                     </li>
