--- a/contato.html
+++ b/contato.html
@@ -171,7 +171,13 @@
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
               <div class="single-footer-widget">
                 <h3>Sobre</h3>
-                <p class="margin">Texto falando sobre a loja</p>
+                <p class="margin">
+                  Na AmoCafé, oferecemos cafés artesanais preparados com grãos
+                  selecionados, em um ambiente acolhedor que convida à pausa e
+                  ao prazer de cada gole. Venha viver uma experiência única,
+                  onde aroma e sabor se encontram para tornar seu dia mais
+                  especial.
+                </p>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 hidden-sm col-xs-12">
