--- a/index.html
+++ b/index.html
@@ -199,8 +199,13 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="about-text">
-              <h3>Nome do Produto</h3>
-              <p>Descrição do produto em promoção</p>
+              <h3>Café Pilão Tradicional</h3>
+              <p>
+                Aproveite o sabor encorpado e marcante do Café Pilão
+                Tradicional, ideal para começar o dia com energia. Disponível em
+                embalagem de 500g, este café é perfeito para quem aprecia uma
+                bebida forte e aromática.
+              </p>
               <a href="#" class="default-btn">
                 <span>Visualizar</span>
               </a>
@@ -393,7 +398,13 @@
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
               <div class="single-footer-widget">
                 <h3>Sobre</h3>
-                <p class="margin">Texto falando sobre a loja</p>
+                <p class="margin">
+                  Na AmoCafé, oferecemos cafés artesanais preparados com grãos
+                  selecionados, em um ambiente acolhedor que convida à pausa e
+                  ao prazer de cada gole. Venha viver uma experiência única,
+                  onde aroma e sabor se encontram para tornar seu dia mais
+                  especial.
+                </p>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 hidden-sm col-xs-12">
