--- a/contato.html
+++ b/contato.html
@@ -14,6 +14,16 @@
     <!-- CSS Custom-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/shortcode/shortcode.css" />
+    <!--Font Awesome Modificada-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+    />
+    <!--Icones Google-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
   </head>
   <body>
     <header class="fixed">
@@ -76,11 +86,11 @@
         <div class="row">
           <div class="col-md-12">
             <div class="breadcrumb-text">
-              <h3>Menu</h3>
+              <h3>Contato</h3>
               <div class="breadcrumb-bar">
                 <ul class="breadcrumb">
-                  <li><a href="#">Home</a></li>
-                  <li>Menu</li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="contato.html">Contato</a></li>
                 </ul>
               </div>
             </div>
@@ -93,27 +103,39 @@
       <!--Área do Mapa do Google-->
       <div class="google-map-area">
         <div id="contacts" class="map-area">
-          <div id="googleMap"></div>
+          <!-- <div id="googleMap"></div> -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d467692.40051657555!2d-46.92562413661677!3d-23.681433225119275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce448183a461d1%3A0x9ba94b08ff335bae!2zU8OjbyBQYXVsbywgU1A!5e0!3m2!1spt-BR!2sbr!4v1748345689584!5m2!1spt-BR!2sbr"
+            style="
+              width: 100%;
+              height: 600px;
+              filter: grayscale(60%);
+              -webkit-filter: grayscale(60%);
+            "
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </div>
       <!--Fim Área mapa Google-->
       <div class="contact-information-container">
         <div class="single-information">
-          <span class="info-icon"><i class="zmdi zmdi-phone"></i></span>]
+          <span class="info-icon"><i class="zmdi zmdi-phone"></i></span>
           <span class="info-text"
             >+00 00 0000-0000 <br />
             +00 00 0000-0000</span
           >
         </div>
         <div class="single-information">
-          <span class="info-icon"><i class="zmdi zmdi-phone"></i></span>]
+          <span class="info-icon"><i class="zmdi zmdi-phone"></i></span>
           <span class="info-text"
             >loja@gmail.com <br />
             www.loja.bom.br</span
           >
         </div>
         <div class="single-information">
-          <span class="info-icon"><i class="zmdi zmdi-pin"></i></span>]
+          <span class="info-icon"><i class="zmdi zmdi-pin"></i></span>
           <span class="info-text"
             >Av. Brasil. 00 <br />
             SP, Brasil</span
@@ -263,5 +285,13 @@
         </div>
       </div>
     </section>
+
+    <!-- jQuery (precisa ser carregado primeiro) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
