--- a/menu.html
+++ b/menu.html
@@ -299,5 +299,11 @@
         </div>
       </div>
     </section>
+    <!-- jQuery (precisa ser carregado primeiro) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
