--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,8 @@
     <!-- CSS Custom-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/shortcode/shortcode.css" />
+    <!-- CSS Responsive-->
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <header class="fixed">
