--- a/contato.html
+++ b/contato.html
@@ -14,6 +14,8 @@
     <!-- CSS Custom-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/shortcode/shortcode.css" />
+    <!-- CSS Responsive-->
+    <link rel="stylesheet" href="css/responsive.css" />
     <!--Font Awesome Modificada-->
     <link
       rel="stylesheet"
