--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <!-- CSS Custom-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/shortcode/shortcode.css" />
-
+    <!-- CSS Responsive-->
+    <link rel="stylesheet" href="css/responsive.css" />
     <!-- Modernizr JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
@@ -498,10 +499,8 @@
 
     <!-- OWL Carousel  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>-->
 
-    <!-- Seu script principal -->
-
+    <!-- Script principal -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
